# sss-hs

./: .travis.yml  README.md  ShamirSecretSharing.hs  Test.hs  shamirsecretsharing.cabal
