name:                shamirsecretsharing
version:             0.1.0.0
-- TODO(dsprenkels) Add descriptions
-- synopsis:
-- description:
homepage:            https://github.com/dsprenkels/sss-hs
license:             MIT
license-file:        LICENSE
author:              Daan Sprenkels
maintainer:          example@example.com
copyright:           2017 Daan Sprenkels
category:            Cryptography
build-type:          Simple
-- TODO(dsprenkels) Add README.md file
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     ShamirSecretSharing
  c-sources:           sss/sss.c
                     , sss/hazmat.c
                     , sss/randombytes.c
                     , sss/tweetnacl.c
  build-depends:       base
  default-language:    Haskell2010


test-suite shamirsecretsharing-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       ShamirSecretSharing
  c-sources:           sss/sss.c
                     , sss/hazmat.c
                     , sss/randombytes.c
                     , sss/tweetnacl.c
  build-depends:       base, QuickCheck >= 2 && < 3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dsprenkels/sss-hs
